Replace ZipFile with FileSystemUtil